--- a/index.html
+++ b/index.html
@@ -15,5 +15,9 @@
     <div id="root"></div>
 
     
+    <script
+      charset="utf-8"
+      src="https://static.line-scdn.net/liff/edge/2/sdk.js"
+    ></script>
   </body>
 </html>
